--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Donuts in Tucker</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <!-- Basic Setup -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Page Title -->
+  <title>Donut City – Handmade Donuts in Tucker, Georgia</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Experience fresh, handmade donuts at Donut City in Tucker, GA." />
+
+  <!-- Meta Keywords (optional but outdated) -->
+  <meta name="keywords" content="donuts, Tucker Georgia, donut shop, handmade pastries, local bakery" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://donutcitytucker.com/" />
+
+  <!-- Open Graph (Facebook/LinkedIn Sharing) 
+  <meta property="og:title" content="Donut City – Handmade Donuts in Tucker, GA" />
+  <meta property="og:description" content="We're opening soon in Tucker! Follow Donut City for fresh, handmade donuts and good vibes." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://donutcitytucker.com/" />
+  <meta property="og:image" content="https://donutcitytucker.com/images/og-banner.jpg" />
+-->
+  <!-- Twitter 
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Donut City – Handmade Donuts in Tucker, GA" />
+  <meta name="twitter:description" content="We're almost here! Donut City is opening soon in Tucker, Georgia. Come grab a dozen." />
+  <meta name="twitter:image" content="https://donutcitytucker.com/images/twitter-banner.jpg" />
+Card -->
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Robots Directive -->
+  <meta name="robots" content="index, follow" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
