--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Card -->
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app" class="min-h-screen flex flex-col"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
